<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:contentPadding="7dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/poster"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_centerVertical="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/no_internet" />

                <LinearLayout
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/poster"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="How to get awaay with murderer"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:padding="2dp"
                        android:text="@string/series" />

                    <LinearLayout
                        android:id="@+id/series"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/episodeCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/episodes_count" />

                        <TextView
                            android:id="@+id/seasons_count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/seasons_count" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="4.5"
                            android:textColor="@color/secondaryText"
                            android:textSize="12sp" />

                        <ImageView
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_toEndOf="@+id/rating"
                            android:src="@drawable/star" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:contentPadding="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/summary" />

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/adCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:contentPadding="7dp">

            <include layout="@layout/native_ad_layout" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:contentPadding="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/types" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/typesList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:contentPadding="7dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/may_like_you" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/similarList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:orientation="horizontal"
                    android:padding="3dp"
                    android:visibility="gone"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="16dp" />

                    <TextView
                        android:id="@+id/message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="@string/no_similar"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>