<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GenerateLinkActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="7dp"
        android:padding="5dp"
        android:text="@string/not_profit_page"

        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"

        app:contentPadding="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/waiting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="انتظر من فضلك"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/part1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/codeImage"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp" />

                <EditText
                    android:id="@+id/codeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:hint="ادخل الكود اعلاه"
                    android:paddingLeft="3dp"
                    android:paddingRight="3dp"
                    android:singleLine="true"

                    android:textAlignment="center" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:enabled="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="2dp"
                    android:background="@color/background"
                    android:text="ارسال" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <Button
                    android:id="@+id/watch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/background"
                    android:text="@string/watch" />

                <Button
                    android:id="@+id/download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="13dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="13dp"
                    android:background="@color/background"
                    android:text="@string/download" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/messageLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/icon"

                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="2dp"
                    android:textSize="17sp" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3924327175857175/4736335408" />
</RelativeLayout>